# OOP_MAI_3sem

lab1/: CMakeLists.txt  README.md
lab1/include/: remove_vowels.h
lab1/src/: main.cpp  remove_vowels.cpp
lab1/tests/: test_remove_vowels.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: Octal.h
lab2/src/: Octal.cpp
lab2/tests/: test_octal.cpp
